2024-10-03T01:40:06Z:
* notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/11154399915 # 437
* notice: Stats Output Repository: https://github.com/andry81-stats/bittools--gh-stats/commits?branch=master&time_zone=utc&until=2024-10-03
* notice: last 14d: unq all: 5 9
* notice: prev accum: outdated-unq outdated-all / unq all: 123 485 / 129 496
* notice: next accum: outdated-unq outdated-all / unq all: 124 487 / 129 496
* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -0 / +0 +0 -0 -0 / 0 0
* notice: removed / changed dates: [2024-09-18] / []

2024-10-02T01:39:46Z:
* notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/11136351486 # 436
* notice: Stats Output Repository: https://github.com/andry81-stats/bittools--gh-stats/commits?branch=master&time_zone=utc&until=2024-10-02
* notice: last 14d: unq all: 6 11
* notice: prev accum: outdated-unq outdated-all / unq all: 123 485 / 128 495
* notice: next accum: outdated-unq outdated-all / unq all: 123 485 / 129 496
* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -0 / +1 +1 -0 -0 / 1 1
* notice: removed / changed dates: [] / [2024-10-01]

2024-09-27T01:40:08Z:
* notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/11063033757 # 431
* notice: Stats Output Repository: https://github.com/andry81-stats/bittools--gh-stats/commits?branch=master&time_zone=utc&until=2024-09-27
* notice: last 14d: unq all: 5 10
* notice: prev accum: outdated-unq outdated-all / unq all: 122 484 / 128 495
* notice: next accum: outdated-unq outdated-all / unq all: 123 485 / 128 495
* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -0 / +0 +0 -0 -0 / 0 0
* notice: removed / changed dates: [2024-09-12] / []

2024-09-26T01:39:13Z:
* notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/11043989203 # 430