@@ -1,12 +1,7 @@
 {
-  "count": 9,
-  "uniques": 5,
+  "count": 3,
+  "uniques": 2,
   "views": [
-    {
-      "timestamp": "2024-09-19T00:00:00Z",
-      "count": 6,
-      "uniques": 3
-    },
     {
       "timestamp": "2024-09-25T00:00:00Z",
       "count": 2,
