@@ -1,3 +1,12 @@
+2024-10-04T01:40:15Z:
+* notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/11172520966 # 438
+* notice: Stats Output Repository: https://github.com/andry81-stats/bittools--gh-stats/commits?branch=master&time_zone=utc&until=2024-10-04
+* notice: last 14d: unq all: 2 3
+* notice: prev accum: outdated-unq outdated-all / unq all: 124 487 / 129 496
+* notice: next accum: outdated-unq outdated-all / unq all: 127 493 / 129 496
+* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -0 / +0 +0 -0 -0 / 0 0
+* notice: removed / changed dates: [2024-09-19] / []
+
 2024-10-03T01:40:06Z:
 * notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/11154399915 # 437
 * notice: Stats Output Repository: https://github.com/andry81-stats/bittools--gh-stats/commits?branch=master&time_zone=utc&until=2024-10-03
